portfolio-front/src/styles/index.scss
/* ... */
// MENU

.menu {
  &__content {
    position: absolute;
    display: none;
    top: -0.5rem;
    right: -0.5rem;
    flex-direction: column;
    justify-content: center;
    align-items: start;
    background-color: $dark-color;
    padding: 1rem 2rem 1rem 0.5rem;
  }

  &__list {
    list-style: none;
    padding: 0;
    margin: 1rem 0;
  }

  &__link {
    a {
      display: inline-block;
      padding: 0.5rem 2rem;
      font-family: $karla-regular;
      font-size: 1.5rem;
      text-transform: uppercase;
      color: $green-color;
      transition: color 0.2s ease-in;

      &:hover, &:focus-visible {
        color: $purple-color;
        transition: color 0.2s ease-in;

        ~ hr {
          border-color: $purple-color;
          transition: border-color 0.3s ease-in;
          animation: 0.3s ease-in 0s forwards moving-line;
        }

        @keyframes moving-line {
          from {
            margin-right: 100%;
          }
          50% {
            margin-left: 2rem;
            margin-right: 1rem;
          }
          to {
            margin-left: 2rem;
            margin-right: 25%;
          }
        }
      }
    }
  }

  &__divider {
    border: 0.075rem solid $green-color;
    margin: 0 1rem 0.25rem 2rem;
    transition: border-color 0.2s ease-in;
  }

  &__button {
    position: relative;
    width: 3rem;
    height: 3rem;
    color: $dark-color;
    transition: color 0.2s ease-in;
    z-index: 20;

    &:hover, &:focus-visible {
      cursor: none;
      color: $purple-color;
      transition: color 0.2s ease-in;

      .menu__button-lines div {
        background-color: $purple-color;
        transition: background-color 0.2s ease-in;
      }
    }

    svg {
      width: 3rem;
      height: 3rem;
    }
  }

  &__button-lines {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  &__button-lines div {
    height: 0.1875rem;
    width: 2rem;
    margin-top: 0.25rem;
    margin-bottom: 0.25rem;
    background-color: $dark-color;
  }

  &--active {
    .menu__content {
      display: flex;
    }
  }

  &--close {
    .menu__content {
      animation: 0.3s ease-in-out 0s forwards opening-menu-close;
    }

    @keyframes opening-menu-close {
      from {
        transform: scale(1);
        transform-origin: top right;
      }
      to {
        transform: scale(0);
        transform-origin: top right;
      }
    }
  }

  &--open {
    .menu__content {
      animation: 0.3s ease-in-out 0s forwards opening-menu-open;
    }

    .menu__button-line-top {
      transform: translateY(0.6875rem) rotate(45deg);
      transform-origin: center;
      background-color: $green-color;
      animation: 0.3s ease-in-out 0s menu-button-line-top-in;
    }

    .menu__button-line-middle {
      opacity: 0;
      background-color: $green-color;
      animation: 0.3s ease-in-out 0s menu-button-line-middle-in;
    }

    .menu__button-line-bottom {
      transform: translateY(-0.6875rem) rotate(-45deg);
      transform-origin: center;
      background-color: $green-color;
      animation: 0.3s ease-in-out 0s menu-button-line-bottom-in;
    }

    @keyframes opening-menu-open {
      from {
        transform: scale(0);
        transform-origin: top right;
      }
      to {
        transform: scale(1);
        transform-origin: top right;
      }
    }

    @keyframes menu-button-line-top-in {
      from {
        transform: none;
        background-color: $dark-color;
      }
      50% {
        transform: translateY(0.6875rem);
      }
      to {
        transform: translateY(0.6875rem) rotate(45deg);
        transform-origin: center;
        background-color: $green-color;
      }
    }

    @keyframes menu-button-line-middle-in {
      from {
        opacity: 1;
        background-color: $dark-color;
      }
      to {
        opacity: 0;
        background-color: $green-color;
      }
    }

    @keyframes menu-button-line-bottom-in {
      from {
        transform: none;
        background-color: $dark-color;
      }
      50% {
        transform: translateY(-0.6875rem);
      }
      to {
        transform: translateY(-0.6875rem) rotate(-45deg);
        transform-origin: center;
        background-color: $green-color;
      }
    }
  }

  &--closed {
    .menu__button-line-top {
      animation: 0.3s ease-in-out 0s menu-button-line-top-out;
    }

    .menu__button-line-middle {
      animation: 0.3s ease-in-out 0s menu-button-line-middle-out;
    }

    .menu__button-line-bottom {
      animation: 0.3s ease-in-out 0s menu-button-line-bottom-out;
    }


    @keyframes menu-button-line-top-out {
      from {
        transform: translateY(0.6875rem) rotate(45deg);
        transform-origin: center;
        background-color: $green-color;
      }
      50% {
        transform: translateY(0.6875rem);
      }
      to {
        transform: none;
        background-color: $dark-color;
      }
    }

    @keyframes menu-button-line-middle-out {
      from {
        opacity: 0;
        background-color: $green-color;
      }
      to {
        opacity: 1;
        background-color: $dark-color;
      }
    }

    @keyframes menu-button-line-bottom-out {
      from {
        transform: translateY(-0.6875rem) rotate(-45deg);
        transform-origin: center;
        background-color: $green-color;
      }
      50% {
        transform: translateY(-0.6875rem);
      }
      to {
        transform: none;
        background-color: $dark-color;
      }
    }
  }
}
/* ... */

